--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 GROUP_ID = io.github.vincenzopalazzo
 ARCHTFAT_ID = material-ui-swing
-VERSION = 1.1.1_0.3
+VERSION = 1.1.1_0.3-debug
 
 #Information abaut the maven repository
 signing.keyId=KYE
